<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lalab_orange"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/dialog_close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            app:srcCompat="@drawable/baseline_close_24"
            android:contentDescription="@string/dialog_close_button_description" />

        <TextView
            android:id="@+id/dialog_title_text"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginBottom="200dp"
            android:gravity="center"
            android:text="@string/dialog_title_text_placeholder"
            android:fontFamily="@font/amiko"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/dialog_content_text"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/amiko"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/dialog_content_text_placeholder"
            android:textColor="@color/black" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/dialog_submit_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/transparent"
                android:stateListAnimator="@null"
                android:text="@string/dialog_yes_button_label"
                android:fontFamily="@font/chelsea_market"
                android:textColor="@color/mint_green"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/dialog_cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/transparent"
                android:stateListAnimator="@null"
                android:text="@string/dialog_no_button_label"
                android:fontFamily="@font/chelsea_market"
                android:textColor="@color/tomato_red"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>