<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lalab_orange"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/dialog_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_title_text_placeholder"
                android:fontFamily="@font/amiko"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="end">

            <ImageView
                android:id="@+id/dialog_close_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                app:srcCompat="@drawable/baseline_close_24"
                android:contentDescription="@string/dialog_close_button_description" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="30dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/character_image_view"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/kamatis" />

            <TextView
                android:id="@+id/dialog_content_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/amiko"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:textAlignment="center"
                android:text="@string/dialog_content_text_character_placeholder"
                android:textColor="@color/black" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>